# PAOO

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  EngineeringStudent.cpp  EngineeringStudent.hpp  MedicalStudent.cpp  MedicalStudent.hpp  Student.cpp  Student.hpp  StudentInterface.hpp  class.cpp  class.hpp
src/: main.cpp
src/lib/: CMakeLists.txt  Worker.cpp  Worker.hpp  WorkerManager.cpp  WorkerManager.hpp
